--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,6 @@
 host: :8080
 api:
   signing_secret: "secret-pass"
+service:
   search_radius: 15
+  driver_api_addr: "http://localhost:8081/search"
